automation/aks/src/runtime/manifests/gatekeeper/k8s_objects/flexvolume-drivers-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPFlexVolumes
metadata:
  name: "flexvolumedrivers"
spec:
  match:
    kinds:
      - apiGroups: [""]
        
        kinds:
        - "Pod"
        
  parameters:
    allowedFlexVolumes: []
